<resources>
    <string name="app_name">MajiFix</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="et_phone_number">Enter phone number</string>
    <string name="action_next">Next</string>
    <string name="action_create_account">Save And Continue</string>
    <string name="text_user_name">Enter your full name</string>
    <string name="text_id_title">CIVILIAN IDENTITY</string>
    <string name="text_id_desc">Let the agency recognize you, maybe keep in touch!</string>
    <string name="text_zipCode">Zip code</string>
    <string name="action_startReport">Select Category</string>
    <string name="enpoint_url">http://dawasco.herokuapp.com</string>
    <string name="txt_loading">&#8230;</string>
    <string name="msg_server_error">Error loading data from the server</string>
    <string name="action_reload">Try Again</string>
    <string name="action_toggle_pending">Toggle Pending</string>
    <string name="action_view_account">User Account</string>
    <string name="action_search">Search</string>
    <string name="text_user_phone">Phone number</string>
    <string name="text_empty_phone">Not provided</string>
    <string name="text_profile_desc">Profile picture</string>
    <string name="text_user_email">Email</string>
    <string name="text_empty_email">Not provided</string>
    <string name="text_user_location">Area</string>
    <string name="text_empty_location">Not provided</string>
    <string name="text_user_meter_number">Meter Number</string>
    <string name="text_empty_meter_number">Not provided</string>
    <string name="action_logout">Log out</string>
    <string name="text_confirm_logout">Are you sure you want to logout?</string>
    <string name="action_stay">Stay</string>
    <string name="text_empty_issues">You have not reported any issue.</string>
    <string name="default_zip_code">255</string>
    <string name="text_signing_up">Signing Up</string>
    <string name="text_StatusText">Please wait while we\'re creating your account</string>
    <string name="et_account_number">DAWASCO account number</string>
    <string name="et_meter_number">DAWASCO meter number</string>
    <string name="action_save_profile">Update</string>
    <string name="text_empty_name">Not provided</string>
    <string name="text_empty_account">Not provided</string>
    <string name="action_view_details">View Details</string>
    <string name="action_issue_progress">Issue Progress</string>
    <string name="action_show_on_map">Show On Map</string>
    <string name="text_issue_attachment">Image</string>
    <string name="text_audio_attachment">Audio</string>
    <string name="text_video_attachment">Video</string>
    <string name="text_log_content"><![CDATA[%s]]></string>
    <string name="text_log_extras"><![CDATA[%s@]]></string>
    <string name="text_logs">Internal Notes</string>
    <string name="text_new_issue">Report New Issue</string>
    <string name="text_view_issues">Reported Issues</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_settings">Settings</string>
    <string name="text_menu_icon">Menu Icon</string>
    <string name="text_public_issue">Public Issue</string>
    <string name="text_private_issue">Private Issue</string>
    <string name="text_select_issue_category">Is the issue private or public?</string>
    <string name="text_services">Select Service</string>
    <string name="text_user_account_number">Account Number</string>
    <string name="cam_preview">Camera Preview</string>
    <string name="text_capture_picture">Capture Picture</string>
    <string name="action_capture_audio">Record Audio</string>
    <string name="text_issue_description">Short Descriptions</string>
    <string name="text_issue_date">When did the issue start?</string>
    <string name="text_select_location">Change Location</string>
    <string name="text_select_area">Select Area</string>
    <string name="title_loading_services">Loading Services</string>
    <string name="text_loading_services">Loading open311Services. Please wait&#8230;</string>
    <string name="text_check_mark">✔</string>
    <string name="text_confirm_exit">Any unsaved changes will be lost. Still you want to exit?</string>
    <string name="action_confirm_exit">Yes, exit</string>
    <string name="action_cancel_exit">Remain</string>
    <string name="title_menu">Home</string>
    <string name="text_fetching_location">Fetching Location&#8230;</string>
    <string name="text_fetch_location_error">Error fetching location.</string>
    <string name="action_send">Send</string>
    <string name="service_not_available">Location Not Available</string>
    <string name="invalid_lat_long_used">Invalid longitude or latitude</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address Found</string>
    <string name="text_record_audio">Record Audio</string>
    <string name="text_get_location">Get Location</string>
    <string name="text_curr_location">%1$s (lat: %2$s, long: %3$s)</string>
    <string name="no_geocoder_available">No Geo-coder Available</string>
    <string name="text_fetch_location">Fetch Current Location&#8230;</string>
    <string name="accept_location">Use Location</string>
    <string name="title_curren_location">Current Location</string>
    <string name="warning_empty_issue_body">Cannot post issue without description. Please provide descriptions!</string>
    <string name="warning_empty_issue_location">Cannot open issue without location.</string>
    <string name="warning_empty_service_id">Cannot post an issue without service. Please, select service and retry again</string>
    <string name="text_opening_ticket">Posting Issue to DAWASCO</string>
    <string name="msg_network_error">Network Error</string>
    <string name="text_request_location">We need your location as a starting point to resolve the issue</string>
    <string name="text_confirm_location">Ok, Use My Location</string>
    <string name="text_deny_location">No, Thanks!</string>
    <string name="text_item_saved">Account Updated</string>
    <string name="text_issue_tickets">Issues</string>
    <string name="action_confirm_access_location">Allow</string>
    <string name="action_decline_access_location">Don\'t Allow</string>
    <string name="text_allow_location_access">We need to know your location so that we can pinpoint the issue</string>
    <string name="intro_title__open_ticket">Reporting&#8230;</string>
    <string name="intro_desc__open_ticket">Report water related issues straight to DAWASCO.</string>
    <string name="into_title__extended_support">Extended Support&#8230;</string>
    <string name="intro_desc__extended_support">Unlock the power of your smart phone. Use camera to do a live capture of pieces of evidence, record audio, or send geo-coordinates along your request</string>
    <string name="text_err_pre_condition_failed">Error Checking pre condition for the first time install</string>
    <string name="text_quit">Report Incident and Quit</string>
    <string name="intro_title__get_notified">Get Notified&#8230;</string>
    <string name="intro_desc__get_ntofied">Receive update whenever the issues you report are being processed</string>
    <string name="text_retry">Retry</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_http_error">Http Error occurred. Do you want to report this incident?</string>
    <string name="text_report">Yes, Report</string>

    <string-array name="duration_names">
        <item>Today</item>
        <item>Yesterday</item>
        <item>This week</item>
        <item>This month</item>
        <item>Old Issues</item>
    </string-array>

    <string-array name="details_viewpager_titles">
        <item>Details</item>
        <item>Progress</item>
    </string-array>
</resources>
