<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view_details"
        android:enabled="true"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/action_view_details"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_view_progress"
        android:enabled="true"
        android:icon="@drawable/ic_gavel_black_24dp"
        android:title="@string/action_issue_progress"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_on_map"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/action_show_on_map"
        app:showAsAction="ifRoom" />
</menu>