<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_toggle_pending"
        app:actionViewClass="android.support.v7.widget.SwitchCompat"
        app:showAsAction="ifRoom"
        android:title="@string/action_toggle_pending"/>

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_user_acc"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/action_view_account"
        app:showAsAction="ifRoom|collapseActionView"/>
</menu>