<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- full name -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="24dp"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/StyledEditTextTheme"
        android:textColorHint="#c1c2c4">

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_user_name"/>

    </android.support.design.widget.TextInputLayout>


    <!-- email address -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="8dp"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/StyledEditTextTheme"
        android:textColorHint="#c1c2c4">

        <EditText
            android:id="@+id/et_UserEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_user_email"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Phone number (Including zip-code) -->
    <LinearLayout
        android:id="@+id/ll_UserPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            app:hintTextAppearance="@style/StyledEditTextTheme"
            android:textColorHint="#c1c2c4">

            <EditText
                android:id="@+id/et_ZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:text="@string/default_zip_code"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_PhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            app:hintTextAppearance="@style/StyledEditTextTheme"
            android:textColorHint="#c1c2c4">

            <EditText
                android:id="@+id/et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_phone_number"
                android:inputType="phone"
                android:maxLength="15"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Meter number and account number -->
    <LinearLayout
        android:id="@+id/ll_UserAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="32dp"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            app:hintTextAppearance="@style/StyledEditTextTheme"
            android:textColorHint="#c1c2c4">

            <EditText
                android:id="@+id/et_MeterNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/et_meter_number"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_AccountNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            app:hintTextAppearance="@style/StyledEditTextTheme"
            android:textColorHint="#c1c2c4">

            <EditText
                android:id="@+id/et_AccountNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_account_number"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</merge>