<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.codetanzania.ui.activity.IDActivity"
    android:background="@color/gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/content_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawablePadding="4dp"
                    android:text="@string/text_id_title"/>

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_id_desc"/>

                <include layout="@layout/edit_profile_content_scrolling"/>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp">

            <Button
                android:id="@+id/btn_Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_create_account"
                android:layout_alignParentEnd="true"
                android:drawableStart="@drawable/ic_check_black_24dp"
                android:drawablePadding="4dp"
                style="?android:attr/borderlessButtonStyle"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>