<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_OpenIssueTicket"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_capture_moment"/>

            <fragment
                android:id="@+id/frag_CapturePreview"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:name="com.github.codetanzania.ui.fragment.ImageCaptureFragment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/text_select_area" />

            <!-- Map showing issue location -->
            <FrameLayout
                android:id="@+id/frl_MapView"
                android:layout_width="match_parent"
                android:layout_height="175dp">

                <!-- Map will be rendered here -->

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_NextAction"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:gravity="end">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_mic_black_24dp"
            app:fabSize="mini"/>

        <EditText
            android:id="@+id/et_Msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:padding="10dp"
            android:hint="@string/text_issue_description"/>

        <Button
            android:id="@+id/btn_NextAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/action_send"
            android:textColor="@color/colorAccent"
            style="?attr/borderlessButtonStyle"
            android:drawableEnd="@drawable/ic_send_24dp"/>

    </LinearLayout>

</RelativeLayout>